Added a filter to fix relative paths of url's in css stylesheets.

--- a/src/Assman.UnitTests/Assman.UnitTests.csproj
+++ b/src/Assman.UnitTests/Assman.UnitTests.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="PreConsolidation\TestCompiledFilePersister.cs" />
     <Compile Include="TestCssDependencyProvider.cs" />
+    <Compile Include="TestCssRelativePathFilter.cs" />
     <Compile Include="TestHttpDependencyCache.cs" />
     <Compile Include="Registration\TestDependencyResolvingResourceRegistry.cs" />
     <Compile Include="Registration\TestConsolidatingResourceRegistry.cs" />
