Made detection of externally compiled resources within groups automatic (no more need to manually specify the mode)

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -4,8 +4,7 @@
     <groups>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared/JQuery.js">
         <include>
-          <add path="~/Scripts/jquery-1.4.1.min.js" mode="Release" />
-          <add path="~/Scripts/jquery-1.4.1.js" mode="Debug" />
+          <add path="~/Scripts/jquery-1.4.1.js" />
         </include>
       </group>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared/Microsoft.js">
