--- a/src/PackageSpecs/Assman/Content/Assman.config
+++ b/src/PackageSpecs/Assman/Content/Assman.config
@@ -3,11 +3,13 @@
     <groups>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared.js">
         <include>
-          <add regex="~/Scripts/jquery-1\.\d\.\d\.min\.js" mode="Release" />
-          <add regex="~/Scripts/jquery-1\.\d\.\d\.js" mode="Debug" />
+          <add regex="~/Scripts/jquery-1\.\d\.\d\.js" />
         </include>
       </group>
     </groups>
+    <globalDependencies>
+      <!-- add scripts that you want to assume are always present here (e.g. jQuery) -->
+    </globalDependencies>
   </scripts>
   <stylesheets>
     <groups>
@@ -17,5 +19,8 @@
         </include>
       </group>
     </groups>
+    <globalDependencies>
+      <!-- add stylesheets you want to always appear first here (e.g. reset stylesheets)-->
+    </globalDependencies>
   </stylesheets>
 </assman>
