Added functionality to ResourceHandlers to set the expires header to a year in the future when the resource request is "versioned".

--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -92,6 +92,7 @@
     <Compile Include="ContentFiltering\DefaultPipelines.cs" />
     <Compile Include="ExternallyCompiledResource.cs" />
     <Compile Include="ExternallyCompiledResourceExtensions.cs" />
+    <Compile Include="Handlers\RequestContextExtensions.cs" />
     <Compile Include="IFinderExcluder.cs" />
     <Compile Include="IndividuallyCompiledResource.cs" />
     <Compile Include="CompositeResourceFilter.cs" />
