Added a step to the NuGet packages to set up precompilation.

--- a/src/PackageSpecs/Assman.Mvc/Assman.Mvc2.nuspec
+++ b/src/PackageSpecs/Assman.Mvc/Assman.Mvc2.nuspec
@@ -12,11 +12,13 @@
     <tags>javascript css mash consolidation mvc</tags>
     <dependencies>
       <dependency id="Assman" version="1.9" />
+      <dependency id="NuGetPowerTools" version="0.26" />
     </dependencies>
   </metadata>
   <files>
     <file src="..\..\..\output\lib\Mvc2\**\Assman.Mvc.dll" target="lib" />
     <file src="..\..\..\output\lib\Mvc2\**\Assman.Mvc.xml" target="lib" />
     <file src="Content\**\*.*" target="Content" />
+    <file src="Tools\*.*" target="Tools" />
   </files>
 </package>
