--- a/src/PackageSpecs/Assman/Content/Assman.config
+++ b/src/PackageSpecs/Assman/Content/Assman.config
@@ -1,4 +1,4 @@
-<assman consolidate="true" manageDependencies="true">
+<assman>
   <scripts>
     <groups>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared.js">
