--- a/src/Assman.Mvc/Assman.Mvc.csproj
+++ b/src/Assman.Mvc/Assman.Mvc.csproj
@@ -27,6 +27,7 @@
     <DefineConstants Condition="$(TargetClrVersion)!='4.0'">DEBUG;TRACE;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+	<NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,6 +39,7 @@
     <DefineConstants Condition="$(TargetClrVersion)!='4.0'">TRACE;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+	<NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -59,10 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Html\DummyStringResult.cs" />
-    <Compile Include="Html\AjaxHelperExtensions.cs" />
-    <Compile Include="Html\HtmlHelperExtensions.cs" />
-    <Compile Include="Html\IHtmlString.cs" />
+    <Compile Include="Registration\DummyStringResult.cs" />
+    <Compile Include="Registration\AjaxHelperExtensions.cs" />
+    <Compile Include="Registration\HtmlHelperExtensions.cs" />
     <Compile Include="IgnoreRoutesForConsolidatedUrls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceIncludeResolver.cs" />
