--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -62,6 +62,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Assman.XML</DocumentationFile>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+	<NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Build.Framework" />
