Added experimental gzip support.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0"?>
-<assman manageDependencies="true">
+<assman gzip="true">
   <scripts>
     <groups>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared/JQuery.js">
