Added a YuiCompressor plugin.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0"?>
-<assman gzip="true">
+<assman>
   <scripts>
     <groups>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared/JQuery.js">
@@ -47,9 +47,13 @@
         </include>
       </group>
     </groups>
+    <globalDependencies>
+      <add path="~/Content/Site.css" />
+    </globalDependencies>
   </stylesheets>
   <plugins>
     <!-- add support for .less files -->
     <add type="Assman.Less.dotLessAssmanPlugin, Assman.Less, Version=1.0.0.0, Culture=neutral" />
+    <add type="Assman.YuiCompressor.YuiCompressorPlugin, Assman.YuiCompressor, Version=1.0.0.0, Culture=neutral" />
   </plugins>
 </assman>
