--- a/samples/Mvc-WebAppProject/Website/Web.config
+++ b/samples/Mvc-WebAppProject/Website/Web.config
@@ -33,7 +33,7 @@
             affects performance, set this value to true only 
             during development.
     -->
-    <compilation debug="true">
+    <compilation debug="false">
       <assemblies>
         <add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
         <add assembly="System.Web.Abstractions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
