--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\src\Assman.Less\packages.config" />
   <repository path="..\samples\Mvc-WebAppProject\Website\packages.config" />
   <repository path="..\src\Assman.Spark\packages.config" />
+  <repository path="..\src\Assman.YuiCompressor\packages.config" />
 </repositories>
