renamed the Assman.Less assembly to Assman.dotLess to be consistent with the NuGet package name.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -53,7 +53,7 @@
   </stylesheets>
   <plugins>
     <!-- add support for .less files -->
-    <add type="Assman.Less.dotLessAssmanPlugin, Assman.Less, Version=1.0.0.0, Culture=neutral" />
+    <add type="Assman.dotLess.dotLessAssmanPlugin, Assman.dotLess, Version=1.0.0.0, Culture=neutral" />
     <add type="Assman.YuiCompressor.YuiCompressorPlugin, Assman.YuiCompressor, Version=1.0.0.0, Culture=neutral" />
   </plugins>
 </assman>
